# sonar

./: .gitignore  PRD.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  BOUNDED-CONTEXTS.md
sonar-android/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
sonar-android/app/: build.gradle.kts
sonar-android/app/src/main/: AndroidManifest.xml
sonar-android/app/src/main/java/com/sonar/app/: SonarApplication.kt
sonar-android/app/src/main/java/com/sonar/app/di/: AppModule.kt
sonar-android/app/src/main/java/com/sonar/app/ui/: MainActivity.kt
sonar-android/app/src/main/res/values/: Theme.xml
sonar-android/application/: build.gradle.kts
sonar-android/application/src/main/java/com/sonar/application/usecases/: RecordingUseCases.kt
sonar-android/data/: build.gradle.kts
sonar-android/data/src/main/java/com/sonar/data/audio/: AudioPlayer.kt  AudioRecorder.kt  AudioRecorderAdapter.kt
sonar-android/data/src/main/java/com/sonar/data/llm/: GeminiLlmAdapter.kt
sonar-android/data/src/main/java/com/sonar/data/local/: SonarDatabase.kt
sonar-android/data/src/main/java/com/sonar/data/repository/: RecordingRepositoryImpl.kt
sonar-android/data/src/main/java/com/sonar/data/search/: SolutionSearchAdapter.kt
sonar-android/data/src/main/java/com/sonar/data/stt/: WhisperSttAdapter.kt
sonar-android/domain/: build.gradle.kts
sonar-android/domain/src/main/java/com/sonar/domain/: ApiKeys.kt  SonarDomain.kt
src/sonar/: __init__.py  analyzer.py  cli.py  config.py  formatter.py  models.py  recorder.py  searcher.py  stt.py
(+19 files in other folders)
