[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sonar-cli"
version = "0.1.0"
description = "Recording Conversation Analysis Tool — Record, transcribe, analyze, and search for solutions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

authors = [
    {name = "Sonar Team"},
]

dependencies = [
    "sounddevice>=0.5.0",
    "faster-whisper>=1.0.0",
    "click>=8.0",
    "rich>=13.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "soundfile>=0.12",
]

[project.scripts]
sonar = "sonar.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sonar = ["py.typed"]
